@@ -18,6 +18,9 @@ Release 0.19.2 - Unreleased
    HBASE-1347  HTable.incrementColumnValue does not take negative 'amount'
                (Evgeny Ryabitskiy via Stack)
    HBASE-1365  Typo in TableInputFormatBase.setInputColums (Jon Gray via Stack)
+   HBASE-1318  Thrift server doesnt know about atomicIncrement
+               (Ryan Rawson via Stack)
+
 
 Release 0.19.1 - 03/19/2009
   BUG FIXES
